--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,9 @@ xcuserdata/
 ## compatibility with Xcode 8 and earlier (ignoring not required starting Xcode 9)
 *.xcscmblueprint
 *.xccheckout
+.DS_Store
+*.swp
+*~.nib
 
 ## compatibility with Xcode 3 and earlier (ignoring not required starting Xcode 4)
 build/
